# right-tools-project

./: .gitignore
backend/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/rt_project/: manage.py
backend/rt_project/rt_app/: models.py  urls.py  views.py
backend/rt_project/rt_app/migrations/: 0001_initial.py  0002_alter_customuser_last_login.py  0003_auto_20211218_1306.py  0004_auto_20211218_1317.py
backend/rt_project/rt_app/users/: serializers.py  urls.py  views.py
backend/rt_project/rt_project/: asgi.py  settings.py  urls.py  wsgi.py  yasg.py
backend/src/config/: settings.py  simplejwt.py  urls.py  yasg.py
backend/src/django_bot_exceptions/: apps.py  checks.py  conf.py  middlewares.py
backend/src/django_simple_logs/: apps.py  checks.py  conf.py  defaults.py  middlewares.py
backend/src/image_compressor/: apps.py  compressor.py  comressor.py  old_comressor.py  storages.py  utils.py
backend/src/rt_app/: apps.py  middlewares.py  models.py  storages.py  urls.py  views.py
backend/src/rt_app/auth/: serialzier.py  urls.py  views.py
backend/src/rt_app/backgrounds/: serializers.py  urls.py  views.py
backend/src/rt_app/common/: exceptions.py  permissions.py  serializers.py  services.py
backend/src/rt_app/documents/: serializers.py  urls.py  views.py
backend/src/rt_app/image_service/: services.py
backend/src/rt_app/kanban-boards/: urls.py  views.py
backend/src/rt_app/kanban_boards/: serializers.py  urls.py  views.py
backend/src/rt_app/kanban_cards/: serializers.py  services.py  urls.py  views.py
backend/src/rt_app/migrations/: 0001_initial.py  0002_alter_user_photo.py  0003_subdivision_level.py  0004_remove_user_user_created.py  0005_background.py  0007_project_date_create.py  (+13 more)
(+250 files in other folders)
